--- a/style/main.css
+++ b/style/main.css
@@ -614,7 +614,9 @@ body {
         width: 100%;
         height: 200px;
         -o-object-fit: cover;
-           object-fit: cover; }
+           object-fit: cover;
+        -o-object-position: center bottom;
+           object-position: center bottom;}
 
   .footer {
     margin-bottom: 120px; }
